--- a/test/Aria2Net/CMakeLists.txt
+++ b/test/Aria2Net/CMakeLists.txt
@@ -1,13 +1,18 @@
-set(Aria2Net_test Aria2Net_test)
-file(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false *.h *.cpp)
-file(GLOB_RECURSE TESTED_SOURCES LIST_DIRECTORIES false ${CMAKE_CURRENT_SOURCE_DIR}/../../sVanilla/src/Aria2Net/*.h ${CMAKE_CURRENT_SOURCE_DIR}/../../sVanilla/src/Aria2Net/*.cpp)
-file(GLOB_RECURSE TESTED_DEPANDED_SOURCES LIST_DIRECTORIES false ${CMAKE_CURRENT_SOURCE_DIR}/../../sVanilla/src/NetWork/*.h ${CMAKE_CURRENT_SOURCE_DIR}/../../sVanilla/src/NetWork/*.cpp
-                                                                ${CMAKE_CURRENT_SOURCE_DIR}/../../sVanilla/src/BiliApi/*.h ${CMAKE_CURRENT_SOURCE_DIR}/../../sVanilla/src/BiliApi/*.cpp
-                                                                ${CMAKE_CURRENT_SOURCE_DIR}/../../sVanilla/src/Util/*.h ${CMAKE_CURRENT_SOURCE_DIR}/../../sVanilla/src/Util/*.cpp
-                                                                ${CMAKE_CURRENT_SOURCE_DIR}/../../sVanilla/src/FFmpeg/*.h ${CMAKE_CURRENT_SOURCE_DIR}/../../sVanilla/src/FFmpeg/*.cpp)
-set(SOURCES ${TEST_SOURCES} ${TESTED_SOURCES} ${TESTED_DEPANDED_SOURCES})
+set(TESTED_LIB Aria2Net)
+set(TEST_NAME ${TESTED_LIB}_test)
 
-set(CMAKE_AUTOMOC ON)
+file(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false *.h *.cpp)
+set(SOURCES ${TEST_SOURCES})
+
+add_executable(${TEST_NAME} ${SOURCES})
+add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
+
+add_compile_definitions(TEST_PROJ_DIR=L"${CMAKE_CURRENT_SOURCE_DIR}")
+
+include_directories(
+    ${CMAKE_SOURCE_DIR}/sVanilla/src
+)
+
 # qt
 set(QT_COMPONENTS
     Core
@@ -22,22 +27,13 @@ find_package(spdlog REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
 find_package(CURL REQUIRED)
 
-add_executable(${Aria2Net_test} ${SOURCES})
-#add_test(NAME ${Aria2Net_test} COMMAND ${Aria2Net_test})
-#add_compile_definitions(TEST_PROJ_DIR=L"${CMAKE_CURRENT_SOURCE_DIR}")
-#add_dependencies(${Aria2Net_test} gtest gmock gtest_main gmock_main)
-
-gtest_discover_tests(${Aria2Net_test}
-        # set a working directory so your project root so that you can find test data via paths relative to the project root
-        WORKING_DIRECTORY ${PROJECT_DIR}
-        PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_DIR}"
-)
-
 foreach (COMPONENTS ${QT_COMPONENTS})
     set(QT_LIBS ${QT_LIBS} Qt${QT_VERSION_MAJOR}::${COMPONENTS})
 endforeach ()
-target_link_libraries(${Aria2Net_test}
+
+target_link_libraries(${TEST_NAME}
     PRIVATE
+        ${TESTED_LIB}
         GTest::gtest 
         GTest::gmock 
         GTest::gtest_main 
@@ -45,11 +41,11 @@ target_link_libraries(${Aria2Net_test}
         spdlog::spdlog
         nlohmann_json::nlohmann_json
         CURL::libcurl
+        NetWork
         ${QT_LIBS}
 )
 
-# build event
-add_custom_command(TARGET ${Aria2Net_test}
+add_custom_command(TARGET ${TEST_NAME}
     POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_directory  ${CMAKE_CURRENT_SOURCE_DIR}/../../tools $<TARGET_FILE_DIR:${PROJECT_NAME}>
 )
