--- a/test/Zipper/CMakeLists.txt
+++ b/test/Zipper/CMakeLists.txt
@@ -1,15 +1,11 @@
-set(Zipper_test Zipper_test)
+set(TESTED_LIB Zipper)
+set(TEST_NAME ${TESTED_LIB}_test)
+
 file(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false *.h *.cpp)
 set(SOURCES ${TEST_SOURCES})
 
-find_package(spdlog REQUIRED)
-find_package(nlohmann_json CONFIG REQUIRED)
-find_package(CURL REQUIRED)
-find_package(unofficial-minizip CONFIG REQUIRED)
-find_package(ZLIB)
-
-add_executable(${Zipper_test} ${SOURCES})
-add_test(NAME ${Zipper_test} COMMAND ${Zipper_test})
+add_executable(${TEST_NAME} ${SOURCES})
+add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
 
 add_compile_definitions(TEST_PROJ_DIR=L"${CMAKE_CURRENT_SOURCE_DIR}")
 
@@ -17,22 +13,18 @@ include_directories(
     ${ZLIB_INCLUDE_DIR}
     ${CMAKE_SOURCE_DIR}/sVanilla/src
 )
-link_directories(${ZLIB_LIB})
-message(STATUS "zlib include dir: ${ZLIB_LIB}")
-target_link_libraries(${Zipper_test}
-    PRIVATE
-        ZLIB::ZLIB
-)
 
-target_link_libraries(${Zipper_test}
+find_package(spdlog REQUIRED)
+find_package(unofficial-minizip CONFIG REQUIRED)
+find_package(ZLIB)
+
+link_directories(${ZLIB_LIB})
+
+target_link_libraries(${TEST_NAME}
     PRIVATE
+        ${TESTED_LIB}
         GTest::gtest_main
         spdlog::spdlog
         unofficial::minizip::minizip
-        Zipper
+        ZLIB::ZLIB
 )
-
-# add_custom_command(TARGET ${Zipper_test}
-#     POST_BUILD
-#         # COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:minizip> $<TARGET_FILE_DIR:${Zipper_test}>
-# )
