--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,7 @@ find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core LinguistTools)
 option(ENABLE_TEST "Enable Test" OFF)
 option(ENABLE_CLANG_TIDY "Enable clang-tidy" OFF)
 option(ENABLE_BUILD_PLUGINS "Enable build plugins" OFF)
+option(ENABLE_BUILD_EXAMPLE "Enable build example" OFF)
 
 if (ENABLE_BUILD_PLUGINS)
     set(INSTALL_DEPENDENCIES_COMMAND "${PYTHON_EXECUTABLE}"  ${CMAKE_CURRENT_SOURCE_DIR}/scripts/merge_plugins_vcpkg.py)
@@ -96,3 +97,7 @@ if (ENABLE_CLANG_TIDY)
     include(${CMAKE_SOURCE_DIR}/cmake/clangtidy.cmake)
     clangtidy()
 endif()
+
+if (ENABLE_BUILD_EXAMPLE)
+    add_subdirectory(example)
+endif ()
